changed the text

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-    <body><h1>David's the Victim</h1></body>
+    <body><h1>David's the Victim because he didn't buy this domain 😭</h1></body>
 </html>
