--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-    <body><h1>David's the Victim because he didn't buy this domain 😭</h1></body>
+    <body>
+        <h1>David's the Victim because he didn't buy this domain 😭</h1>
+        <h6>BTW - Josh bought this domain! I love you, baby 😘</h6>
+    </body>
 </html>
